# cmdi

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
locales/: cmdi.yml
src/: app.rs  config.rs  event.rs  main.rs  theme.rs  util.rs
src/builder/: action.rs  builder.rs  mod.rs  token.rs
src/opencli/: demo-kubectl.yaml  example-dotnet.json  mod.rs  operations.rs  usage.rs  v0_1.rs
src/screens/: mod.rs
src/screens/action_screen/: add_arguments.rs  create_option.rs  mod.rs
src/screens/builder_screen/: control.rs  mod.rs  model.rs  view.rs
src/screens/input_screen/: fzf_select.rs  input.rs  mod.rs  noop.rs
