[package]
name = "cmdi"
version = "0.1.0"
description = "An opinionated command composer for mission-ready terminal maneuvers"
authors = ["Devin Fisher <dev.fisher@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0"
itertools = "=0.13.0"
directories = "6.0.0"
rust-i18n = "3.1.5"
fzf-wrapped = "0.1.4"
config = "0.15.18"
clap = { version = "4.5.50", features = ["derive"] }
log = "0.4.28"
log4rs = "=1.4.0"
tui-input = "0.14.0"